[package]
name = "grrs"
version = "0.1.0"
authors = ["etoal83 <etoal83@gmail.com>"]
edition = "2020"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
anyhow = "1.0"

[dev-dependencies]
assert_cmd = "1.0"
predicates = "1.0"
tempfile = "3"